--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -56,80 +56,116 @@ nocanonical: true
 
       <div class="insertAltText sr-only"></div>
 
-      <div class="group font-size-14 color-palettes">
-        <div class="quarter m-b-lg">
+      <h2 class="h3">Primary colors</h2>
+      <div class="row font-size-14 color-palettes">
+        <div class="col-md-4 m-b-lg">
           <div class="palette-disc bg-primary rounded-circle mb-3"></div>
           <div class="caption">
             <h2 class="h3">Primary</h2>
             <strong>Class:</strong>
             .color-primary
             <br />
-            <strong>CSS:</strong>
-            @color-p2
+            <strong>Variable:</strong>
+            --color-p2
             <br />
             <strong>HEX:</strong>
-            #
-            <span class="insertColorPrimaryHex"></span>
+            #<span class="insertColorPrimaryHex"></span>
             <br />
             <strong>RGB:</strong>
             <span class="insertColorPrimaryDec"></span>
           </div>
         </div>
 
-        <div class="quarter m-b-lg">
+        <div class="col-md-4  m-b-lg">
           <div class="palette-disc bg-highlight rounded-circle mb-3"></div>
           <div class="caption">
             <h2 class="h3">Highlight</h2>
             <strong>Class:</strong>
             .color-highlight
             <br />
-            <strong>CSS:</strong>
-            @color-p1
+            <strong>Variable:</strong>
+            --color-p1
             <br />
             <strong>HEX:</strong>
-            #
-            <span class="insertColorHighlightHex"></span>
+            #<span class="insertColorHighlightHex"></span>
             <br />
             <strong>RGB:</strong>
             <span class="insertColorHighlightDec"></span>
           </div>
         </div>
 
-        <div class="quarter m-b-lg">
-          <div class="palette-disc bg-s1 rounded-circle mb-3"></div>
-          <div class="caption">
-            <h2 class="h3">Secondary</h2>
-            <strong>Class:</strong>
-            .color-s1
-            <br />
-            <strong>CSS:</strong>
-            @color-s1
-            <br />
-            <strong>HEX:</strong>
-            #
-            <span class="insertColorS1Hex"></span>
-            <br />
-            <strong>RGB:</strong>
-            <span class="insertColorS1Dec"></span>
-          </div>
-        </div>
-
-        <div class="quarter m-b-lg">
+        <div class="col-md-4  m-b-lg">
           <div class="palette-disc bg-standout rounded-circle mb-3"></div>
           <div class="caption">
             <h2 class="h3">Standout</h2>
             <strong>Class:</strong>
             .color-standout
             <br />
-            <strong>CSS:</strong>
-            @color-p3
+            <strong>Variable:</strong>
+            --color-p3
             <br />
             <strong>HEX:</strong>
-            #
-            <span class="insertColorStandoutHex"></span>
+            #<span class="insertColorStandoutHex"></span>
             <br />
             <strong>RGB:</strong>
             <span class="insertColorStandoutDec"></span>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="h3">Secondary colors</h2>
+      <div class="row font-size-14 color-palettes">
+        <div class="col-md-4 m-b-lg">
+          <div class="palette-disc bg-s1 rounded-circle mb-3"></div>
+          <div class="caption">
+            <h3 class="h4">Secondary 1</h3>
+            <strong>Class:</strong>
+            .color-s1
+            <br />
+            <strong>Variable:</strong>
+            --color-s1
+            <br />
+            <strong>HEX:</strong>
+            #<span class="insertColorS1Hex"></span>
+            <br />
+            <strong>RGB:</strong>
+            <span class="insertColorS1Dec"></span>
+          </div>
+        </div>
+
+        <div class="col-md-4 m-b-lg">
+          <div class="palette-disc bg-s2 rounded-circle mb-3"></div>
+          <div class="caption">
+            <h3 class="h4">Secondary 2</h3>
+            <strong>Class:</strong>
+            .color-s2
+            <br />
+            <strong>Variable:</strong>
+            --color-s2
+            <br />
+            <strong>HEX:</strong>
+            #<span class="insertColorS2Hex"></span>
+            <br />
+            <strong>RGB:</strong>
+            <span class="insertColorS2Dec"></span>
+          </div>
+        </div>
+
+        <div class="col-md-4 m-b-lg">
+          <div class="palette-disc bg-s3 rounded-circle mb-3"></div>
+          <div class="caption">
+            <h3 class="h4">Secondary 3</h3>
+            <strong>Class:</strong>
+            .color-s3
+            <br />
+            <strong>Variable:</strong>
+            --color-s3
+            <br />
+            <strong>HEX:</strong>
+            #<span class="insertColorS3Hex"></span>
+            <br />
+            <strong>RGB:</strong>
+            <span class="insertColorS3Dec"></span>
           </div>
         </div>
       </div>
@@ -279,7 +315,7 @@ nocanonical: true
 
   .insertColorPrimaryHex,
   .insertColorHighlightHex,
-  .insertColorS1Hex,
+  .insertColorS1Hex, .insertColorS2Hex, .insertColorS2Hex,
   .insertColorStandoutHex {
    text-transform: uppercase;
   }
@@ -308,6 +344,8 @@ nocanonical: true
     colorPrimary: "577786",
     colorStandout: "46565E",
     colorS1: "f5f9fa",
+    colorS2: "ccd4d6",
+    colorS3: "a7b7bc",
     altText: "Delta color theme: A blue-gray, a medium-light blue-gray, a light blue-gray, and a dark blue-gray."
    },
    eureka: {
@@ -316,6 +354,8 @@ nocanonical: true
     colorPrimary: "3E4B4D",
     colorStandout: "21272A",
     colorS1: "f9f4f0",
+    colorS2: "e2dfda",
+    colorS3: "ccc8bf",
     altText: "Eureka color theme: A dark gray, a beige, an off-white, and an off-black."
    },
    mono: {
@@ -324,6 +364,8 @@ nocanonical: true
     colorPrimary: "545351",
     colorStandout: "191919",
     colorS1: "ededef",
+    colorS2: "d4d4cd",
+    colorS3: "b3b2ac",
     altText: "Mono color theme: A dark gray, a yellow, a light gray, and an off-black."
    },
    oceanside: {
@@ -332,6 +374,8 @@ nocanonical: true
     colorPrimary: "046B99",
     colorStandout: "323A45",
     colorS1: "eef8fb",
+    colorS2: "87b8ce",
+    colorS3: "4993b5",
     altText: "Oceanside color theme: A medium blue, a yellow, a light blue, and a dark gray."
    },
    orangecounty: {
@@ -340,6 +384,8 @@ nocanonical: true
     colorPrimary: "A15801",
     colorStandout: "483723",
     colorS1: "fbf0e7",
+    colorS2: "f6e7cc",
+    colorS3: "f7d7a6",
     altText: "Orange County color theme: A dark orange, a yellow-orange, a cream, and a dark brown."
    },
    pasorobles: {
@@ -348,14 +394,18 @@ nocanonical: true
     colorPrimary: "691808",
     colorStandout: "313131",
     colorS1: "f5f5f5",
+    colorS2: "bababa",
+    colorS3: "e6dcdc",
     altText: "Paso Robles color theme: A  dark red, a yellow-orange, a light gray, and a dark brown."
    },
    sacramento: {
     name: "Sacramento",
     colorHighlight: "7bb0da",
     colorPrimary: "153554",
-    colorStandout: "730000",
-    colorS1: "e1ecf7",
+    colorStandout: "343b4b",
+    colorS1: "f5f5f5",
+    colorS2: "cccccc",
+    colorS3: "e6dcdc",
     altText: "Sacramento color theme: A dark blue, a medium-light blue, a light blue, and a dark red."
    },
    santabarbara: {
@@ -364,6 +414,8 @@ nocanonical: true
     colorPrimary: "834B1E",
     colorStandout: "3c2c29",
     colorS1: "f8eee4",
+    colorS2: "f1dac2",
+    colorS3: "e8bd90",
     altText: "Santa Barbara color theme: A brown, a medium-light orange, a cream, and a dark brown."
    },
    santacruz: {
@@ -372,6 +424,8 @@ nocanonical: true
     colorPrimary: "0f4f94",
     colorStandout: "2c2c4f",
     colorS1: "eff4fa",
+    colorS2: "c7d9ea",
+    colorS3: "9bb8d3",
     altText: "Santa Cruz color theme: A blue, an orange, a light blue, and a dark blue."
    },
    shasta: {
@@ -380,6 +434,8 @@ nocanonical: true
     colorPrimary: "336c39",
     colorStandout: "3c4543",
     colorS1: "e4f1e5",
+    colorS2: "daefe8",
+    colorS3: "a1cca1",
     altText: "Shasta color theme: A green, a yellow, a light green, and a dark gray."
    },
    sierra: {
@@ -388,6 +444,8 @@ nocanonical: true
     colorPrimary: "447766",
     colorStandout: "194949",
     colorS1: "e8f1ee",
+    colorS2: "daefe8",
+    colorS3: "a1cca1",
     altText: "Sierra color theme: A green, a yellow, a light green, and a dark green."
    },
    trinity: {
@@ -396,6 +454,8 @@ nocanonical: true
     colorPrimary: "446a7c",
     colorStandout: "21272a",
     colorS1: "eff5f8",
+    colorS2: "e2dfda",
+    colorS3: "ccc8bf",
     altText: "Trinity color theme: A blue-gray, a beige, a light gray, and  an off-black."
    }
   };
@@ -455,4 +515,14 @@ nocanonical: true
   arrayDec = hexToDec(themeData[queryString].colorS1);
   document.querySelector(".insertColorS1Dec").innerHTML = arrayDec;
   document.querySelector(".color-palettes .bg-s1").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
+
+  document.querySelector(".insertColorS2Hex").innerHTML = themeData[queryString].colorS2;
+  arrayDec = hexToDec(themeData[queryString].colorS2);
+  document.querySelector(".insertColorS2Dec").innerHTML = arrayDec;
+  document.querySelector(".color-palettes .bg-s2").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
+
+  document.querySelector(".insertColorS3Hex").innerHTML = themeData[queryString].colorS3;
+  arrayDec = hexToDec(themeData[queryString].colorS3);
+  document.querySelector(".insertColorS3Dec").innerHTML = arrayDec;
+  document.querySelector(".color-palettes .bg-s3").style.border = "1px solid rgb(" + calcBorder(arrayDec) + ")"
 </script>
