--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -52,7 +52,7 @@ permalink: "cdn.html"
 
     <h2>Examples</h2>
     <h3>Using core CSS file</h3>
-    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.2/css/cagov.core.css" <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-nDTZJJ+/7rO5vU+gzLCrNKW1i2LzOmM/v7lD58Of9Jw="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span></span> <span class="text-accent3">id=</span><span class="text-accent7">"main-stylesheet"</span><span class="text-accent-p2">&gt;</span></pre>
+    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/cagov.core.css" <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-x/VqIC71yVgggbC/yy5jsbBG6nsNO3dbpmVctyJeyyc="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span></span> <span class="text-accent3">id=</span><span class="text-accent7">"main-stylesheet"</span><span class="text-accent-p2">&gt;</span></pre>
 
     <h4>Optional color theme CSS</h4>
     <p>
@@ -62,10 +62,10 @@ permalink: "cdn.html"
       the <a href="/visual-design/color.html">Colors</a> page.
     </p>
 
-    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.2/css/colortheme-oceanside.css"</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span>  <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span><br /></pre>
+    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-oceanside.css"</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span>  <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-nmOVnOpLMzHsUgbJqbP+KvjjTiAYm7Kyqqo2SUx9BGM="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span><br /></pre>
 
     <h3>Using JS files</h3>
-    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.2/js/cagov.core.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-vqbQV1TN99nVaQ9G8k+rb30IIb2/WXwl+YGtGHv7o/E="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
+    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/js/cagov.core.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-vu+Iii4BZ0Yy2s6VAbDrk7mKj/5qICjh5FhtVVBfOmY="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
 
     <h3>Crossorigin anonymous</h3>
     <p>
@@ -101,10 +101,10 @@ permalink: "cdn.html"
      <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&amp;display=block"</span><span class="text-accent-p2">&gt;</span>
 
      <span class="text-muted">&lt;!-- State Template CDN CSS --&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.2/css/cagov.core.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-nDTZJJ+/7rO5vU+gzLCrNKW1i2LzOmM/v7lD58Of9Jw="</span> <span class="text-accent3">id=</span><span class="text-accent7">"main-stylesheet"</span><span class="text-accent-p2">&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.2/css/colortheme-oceanside.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-PC5Yszm8bAjYYFmjeL8EeB8mHo+S4dJbQt4OwA4aTmg="</span>  <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/cagov.core.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-x/VqIC71yVgggbC/yy5jsbBG6nsNO3dbpmVctyJeyyc="</span> <span class="text-accent3">id=</span><span class="text-accent7">"main-stylesheet"</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-oceanside.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-nmOVnOpLMzHsUgbJqbP+KvjjTiAYm7Kyqqo2SUx9BGM="</span>  <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
      <span class="text-muted">&lt;!-- State Template JavaScript CDN --&gt;</span>
-     <span class="text-accent-p2">&lt;script </span><span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.2/js/cagov.core.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-vqbQV1TN99nVaQ9G8k+rb30IIb2/WXwl+YGtGHv7o/E="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
+     <span class="text-accent-p2">&lt;script </span><span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/js/cagov.core.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-vu+Iii4BZ0Yy2s6VAbDrk7mKj/5qICjh5FhtVVBfOmY="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 
     <span class="text-accent-p2">&lt;/head&gt;</span>
    <span class="text-accent-p2">&lt;body&gt;</span>
@@ -144,41 +144,42 @@ permalink: "cdn.html"
     <h3>Web State Template v6 (production)</h3>
     <ol data-aria-accordion data-multi data-transition data-default="none">
       <li>
-        <h4 data-aria-accordion-heading>Version 6.4.3</h4>
+        <h4 data-aria-accordion-heading>Version 6.5.0</h4>
         <div data-aria-accordion-panel>
           <p>CSS</p>
           <pre>
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/cagov.core.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/cagov.core.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-delta.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-delta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-eureka.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-eureka.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-mono.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-mono.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-oceanside.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-oceanside.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-orangecounty.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-orangecounty.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-pasorobles.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-pasorobles.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-sacramento.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-sacramento.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-santabarbara.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-santabarbara.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-santacruz.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-santacruz.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-sierra.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-sierra.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-shasta.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-shasta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-trinity.css" rel="stylesheet" crossorigin="anonymous"&gt;
-&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/css/colortheme-trinity.min.css" rel="stylesheet" crossorigin="anonymous"&gt;</pre
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/cagov.core.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/cagov.core.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/cagov.core.flat.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-delta.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-delta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-eureka.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-eureka.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-mono.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-mono.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-oceanside.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-oceanside.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-orangecounty.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-orangecounty.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-pasorobles.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-pasorobles.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-sacramento.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-sacramento.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-santabarbara.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-santabarbara.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-santacruz.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-santacruz.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-sierra.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-sierra.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-shasta.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-shasta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-trinity.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/css/colortheme-trinity.min.css" rel="stylesheet" crossorigin="anonymous"&gt;</pre
           >
           <p>JS</p>
           <pre>
-&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/js/cagov.core.js" defer crossorigin="anonymous&gt;&lt;/script&gt;
-&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.4.3/js/cagov.core.min.js" defer crossorigin="anonymous"&gt;&lt;/script&gt;</pre
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/js/cagov.core.js" defer crossorigin="anonymous&gt;&lt;/script&gt;
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.0/js/cagov.core.min.js" defer crossorigin="anonymous"&gt;&lt;/script&gt;</pre
           >
         </div>
       </li>
